--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=supportApp
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dcbapp
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=gisela
-spring.datasource.password=123456
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
